syntax = "proto3";

option go_package = "user/";

package com.NimbusIM.proto.user;

import "common/common.proto";

service User {
  rpc Upset (UserUpsetRequest) returns (UserEntity) {
  }

  rpc UpdateStatus (UpdateStatusRequest) returns (common.Empty) {
  }

  rpc DetailById (common.DetailByIdRequest) returns (UserEntity) {
  }
}

message UserUpsetRequest {
  string email = 1;
}

message UpdateStatusRequest{
  int64 id = 1;
  int32 status = 2;
}

message UserEntity {
  int64 id = 1;
  string email = 2;
  int32 status = 3;
  int64 create_time = 4;
  int64 update_time = 5;
}
